--- a/app/globals.css
+++ b/app/globals.css
@@ -13,7 +13,9 @@
     --foreground: #ededed;
   }
 }
-
+* {
+  transition: all 0.3s ease-in-out;
+}
 body {
   color: var(--foreground);
   background: var(--background);
